tests/compiletests/ui/arch/debug_printf_type_checking.stderr
error: Unterminated format specifier: missing type after precision
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%1");
    |                       ^^^^

error: Unterminated format specifier: missing type after decimal point
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%1.");
    |                       ^^^^^

error: Unrecognised format specifier: '.'
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%.");
    |                       ^^^^

error: Unrecognised format specifier: '.'
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%.1");
    |                       ^^^^^

error: Unterminated format specifier: missing type after fraction precision
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%1.1");
    |                       ^^^^^^

error: Missing vector dimensions specifier
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%1.1v");
    |                       ^^^^^^^

error: Invalid width for vector: 5
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%1.1v5");
    |                       ^^^^^^^^

error: Missing vector type specifier
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%1.1v2");
    |                       ^^^^^^^^

error: Unrecognised vector type specifier: 'r'
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%1.1v2r");
    |                       ^^^^^^^^^

error: Unrecognised format specifier: 'r'
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%r", 11_i32);
    |                       ^^^^

error[E0308]: mismatched types
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%f", 11_u32);
    |         --------------------^^^^^^-
    |         |                   |
    |         |                   expected `f32`, found `u32`
    |         arguments to this function are incorrect
    |
help: the return type of this call is `u32` due to the type of the argument passed
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%f", 11_u32);
    |         ^^^^^^^^^^^^^^^^^^^^------^
    |                             |
    |                             this argument influences the return type of `debug_printf_assert_is_type`
note: function defined here
   --> $SPIRV_STD_SRC/lib.rs:
    |
    | pub fn debug_printf_assert_is_type<T>(ty: T) -> T {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `debug_printf` (in Nightly builds, run with -Z macro-backtrace for more info)
help: change the type of the numeric literal from `u32` to `f32`
    |
    -         debug_printf!("%f", 11_u32);
    +         debug_printf!("%f", 11_f32);
    |

error[E0308]: mismatched types
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%u", 11.0_f32);
    |         --------------------^^^^^^^^-
    |         |                   |
    |         |                   expected `u32`, found `f32`
    |         arguments to this function are incorrect
    |
help: the return type of this call is `f32` due to the type of the argument passed
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%u", 11.0_f32);
    |         ^^^^^^^^^^^^^^^^^^^^--------^
    |                             |
    |                             this argument influences the return type of `debug_printf_assert_is_type`
note: function defined here
   --> $SPIRV_STD_SRC/lib.rs:
    |
    | pub fn debug_printf_assert_is_type<T>(ty: T) -> T {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `debug_printf` (in Nightly builds, run with -Z macro-backtrace for more info)
help: change the type of the numeric literal from `f32` to `u32`
    |
    -         debug_printf!("%u", 11.0_f32);
    +         debug_printf!("%u", 11u32);
    |

error[E0277]: the trait bound `{float}: Vector<f32, 2>` is not satisfied
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%v2f", 11.0);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Vector<f32, 2>` is not implemented for `{float}`
    |
    = help: the following other types implement trait `Vector<T, N>`:
              `BVec2` implements `Vector<bool, 2>`
              `BVec3` implements `Vector<bool, 3>`
              `BVec4` implements `Vector<bool, 4>`
              `DVec2` implements `Vector<f64, 2>`
              `DVec3` implements `Vector<f64, 3>`
              `DVec4` implements `Vector<f64, 4>`
              `IVec2` implements `Vector<i32, 2>`
              `IVec3` implements `Vector<i32, 3>`
            and 8 others
note: required by a bound in `debug_printf_assert_is_vector`
   --> $SPIRV_STD_SRC/lib.rs:
    |
    | pub fn debug_printf_assert_is_vector<
    |        ----------------------------- required by a bound in this function
    |     TY: crate::scalar::Scalar,
    |     V: crate::vector::Vector<TY, SIZE>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `debug_printf_assert_is_vector`
    = note: this error originates in the macro `debug_printf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%f", Vec2::splat(33.3));
    |         --------------------^^^^^^^^^^^^^^^^^-
    |         |                   |
    |         |                   expected `f32`, found `Vec2`
    |         arguments to this function are incorrect
    |
help: the return type of this call is `Vec2` due to the type of the argument passed
   --> $DIR/debug_printf_type_checking.rs:
    |
    |         debug_printf!("%f", Vec2::splat(33.3));
    |         ^^^^^^^^^^^^^^^^^^^^-----------------^
    |                             |
    |                             this argument influences the return type of `debug_printf_assert_is_type`
note: function defined here
   --> $SPIRV_STD_SRC/lib.rs:
    |
    | pub fn debug_printf_assert_is_type<T>(ty: T) -> T {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `debug_printf` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 14 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
